--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -269,7 +269,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, u, i, center,
+small, strike, strong, sub, sup, tt, var, u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label,
 article, aside, canvas, details, embed,
@@ -296,8 +296,6 @@ h2 { font-size: 26px; color: $primaryColor; line-height: 36px; font-family: 'bar
 h3 { font-size: 21px; color: $primaryColor; line-height: 31px; font-family: 'bariolregular', 'Helvetica'; }
 
 main { width: 100%; min-height: 100vh; }
-
-i { font-size: 24px; }
 
 p, input, span, a { font-size: 16px; outline: none; }
 
