--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -260,7 +260,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, u, i, center,
+small, strike, strong, sub, sup, tt, var, u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label,
 article, aside, canvas, details, embed,
@@ -338,10 +338,6 @@ h3 {
 main {
   width: 100%;
   min-height: 100vh;
-}
-
-i {
-  font-size: 24px;
 }
 
 p, input, span, a {
