--- a/webroot/css/back/builder.css
+++ b/webroot/css/back/builder.css
@@ -9,41 +9,34 @@
 div.container_builder {
   overflow: hidden !important;
 }
-div.container_builder div.container_left {
-  width: 70%;
+div.container_builder div.container_left, div.container_builder div.container_right {
   height: calc(100vh - 65px - 1px);
 }
-div.container_builder div.sidebar_tools {
+div.container_builder div.container_left {
+  width: 70%;
+}
+div.container_builder div.container_right {
   width: 30%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border-left: 2px solid #f0f0f0;
-  min-width: 350px;
-  height: 100%;
-  overflow-y: scroll;
-  background-color: #f0f0f0;
 }
-div.container_builder div.sidebar_tools > .menu {
-  width: 100%;
-  height: auto;
-}
-
-/*----------  Partie Gauche du builder  ----------*/
-header.header_builder {
-  background-color: #fff;
-  width: 100%;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 15px 30px;
+div.container_builder header.header_builder {
   height: 60px;
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  background-color: #fff;
+  width: 100%;
+  z-index: 1;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-header.header_builder input#documentTitle {
+
+/*----------  Partie Gauche du builder  ----------*/
+header.header_builder_left {
+  padding: 15px 30px;
+}
+header.header_builder_left input#documentTitle {
   margin: 0;
   padding: 0;
   outline: none;
@@ -54,12 +47,12 @@ header.header_builder input#documentTitle {
   opacity: 0.85;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-header.header_builder input#documentTitle:focus {
+header.header_builder_left input#documentTitle:focus {
   color: #000;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-header.header_builder span.btn_Test_template {
+header.header_builder_left span.btn_Test_template {
   font-size: 15px;
   color: #f0f0f0;
   padding: 4px 8px;
@@ -81,11 +74,11 @@ header.header_builder span.btn_Test_template {
   *zoom: 1;
   *display: inline;
 }
-header.header_builder span.btn_Test_template:hover {
+header.header_builder_left span.btn_Test_template:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-header.header_builder span.btn_Test_template i {
+header.header_builder_left span.btn_Test_template i {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -93,20 +86,20 @@ header.header_builder span.btn_Test_template i {
   *display: inline;
   font-size: 21px;
 }
-header.header_builder span.btn_Test_template span {
+header.header_builder_left span.btn_Test_template span {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
   *zoom: 1;
   *display: inline;
 }
-header.header_builder span.btn_Test_template#valideTemplate {
+header.header_builder_left span.btn_Test_template#valideTemplate {
   background-color: #4CAF50;
 }
-header.header_builder span.btn_Test_template#cancelTemplate {
+header.header_builder_left span.btn_Test_template#cancelTemplate {
   background-color: #F44336;
 }
-header.header_builder span.icon-action, header.header_builder button {
+header.header_builder_left span.icon-action, header.header_builder_left button {
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -128,14 +121,14 @@ header.header_builder span.icon-action, header.header_builder button {
   -webkit-transition-delay: 0s;
   transition: opacity 0.3s ease 0s;
 }
-header.header_builder span.icon-action:hover, header.header_builder button:hover {
+header.header_builder_left span.icon-action:hover, header.header_builder_left button:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-header.header_builder span.icon-action.active, header.header_builder button.active {
+header.header_builder_left span.icon-action.active, header.header_builder_left button.active {
   color: #1565C0;
 }
-header.header_builder div.minicolors {
+header.header_builder_left div.minicolors {
   width: 17px;
   height: 17px;
   top: -1px;
@@ -145,7 +138,7 @@ header.header_builder div.minicolors {
   -webkit-transition-delay: 0s;
   transition: width 0.4s ease 0s;
 }
-header.header_builder div.minicolors input {
+header.header_builder_left div.minicolors input {
   border: 0;
   margin: 0;
   padding: 0;
@@ -164,7 +157,7 @@ header.header_builder div.minicolors input {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-header.header_builder div.minicolors .minicolors-swatch {
+header.header_builder_left div.minicolors .minicolors-swatch {
   top: 50%;
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -174,7 +167,7 @@ header.header_builder div.minicolors .minicolors-swatch {
   height: 100%;
   width: 17px;
 }
-header.header_builder div.minicolors .minicolors-panel {
+header.header_builder_left div.minicolors .minicolors-panel {
   top: 17px;
   visibility: hidden;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
@@ -189,15 +182,15 @@ header.header_builder div.minicolors .minicolors-panel {
   -webkit-transition-property: visibility, opacity;
   transition-property: visibility, opacity;
 }
-header.header_builder div.minicolors:hover {
+header.header_builder_left div.minicolors:hover {
   width: 95px;
 }
-header.header_builder div.minicolors:hover input {
+header.header_builder_left div.minicolors:hover input {
   visibility: visible;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
-header.header_builder div.minicolors:hover .minicolors-panel {
+header.header_builder_left div.minicolors:hover .minicolors-panel {
   visibility: visible;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -216,16 +209,18 @@ div.content_email > div#storage_email {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 10px 0;
-  width: 100%;
+  width: auto;
   margin: 0 auto;
   overflow-x: hidden;
   overflow-y: scroll;
+  max-width: 100%;
 }
 div.content_email > div#storage_email > .sortable-placeholder {
   border: 1px dotted #444;
   border-right: 0;
-  background-color: red;
   border-left: 0;
+  width: 100% !important;
+  background-color: #f3f3f3;
 }
 div.content_email > div#storage_email > table[data-section], div.content_email > div#storage_email table[data-section] * {
   -moz-transition: width 0.5s ease 0s;
@@ -386,20 +381,21 @@ div.tools_section {
   left: 0;
   top: 0;
   background-color: #fff;
-  border: 1px solid #c4c4c4;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   position: absolute;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 div.tools_section span {
   position: relative;
+  -webkit-flex-grow: 1;
   flex-grow: 1;
-  border-bottom: 1px solid #919191;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
   color: #444;
   font-size: 18px;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  opacity: 0.8;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
   cursor: pointer;
   -moz-transition: none 0.1s ease 0s;
   -o-transition: none 0.1s ease 0s;
@@ -414,7 +410,6 @@ div.tools_section span {
 div.tools_section span:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
-  color: #222;
 }
 div.tools_section span i {
   position: absolute;
@@ -433,6 +428,238 @@ div.tools_section span:first-child {
 }
 div.tools_section span:last-child {
   border: 0;
+}
+
+/*----------  Partie Droite du builder  ----------*/
+header.header_builder_right span {
+  width: calc(100% / 2);
+  display: block;
+  background-color: #FF3B49;
+  color: #fff;
+  text-align: center;
+  height: calc(60px - 1px);
+  line-height: 60px;
+  text-transform: uppercase;
+  cursor: pointer;
+  -moz-transition: none 0.3s ease 0s;
+  -o-transition: none 0.3s ease 0s;
+  -webkit-transition: none 0.3s ease;
+  -webkit-transition-delay: 0s;
+  transition: none 0.3s ease 0s;
+  -moz-transition-property: color, background-color;
+  -o-transition-property: color, background-color;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+header.header_builder_right span.active {
+  background-color: #fff;
+  color: #444;
+}
+
+div.content_sidebar {
+  height: calc(100% - 60px);
+  width: 100%;
+  background-color: #fff;
+}
+div.content_sidebar div.task_sidebar {
+  width: 100%;
+  overflow-y: scroll;
+  height: 100%;
+}
+
+/*----------  Items  ----------*/
+div.field_item_sidebar {
+  width: 100%;
+  padding: 10px 30px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
+div.field_item_sidebar > div {
+  width: 100%;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+}
+div.field_item_sidebar label {
+  margin: 8px 0;
+  width: 100%;
+  font-weight: 600;
+  color: #333333;
+}
+div.field_item_sidebar label > span.unity {
+  color: #616161;
+  font-style: italic;
+  font-size: 12px;
+}
+div.field_item_sidebar div.minicolors::after, div.field_item_sidebar select, div.field_item_sidebar input, div.field_item_sidebar option {
+  font-size: 14px !important;
+  padding: 5px;
+}
+div.field_item_sidebar .item, div.field_item_sidebar select, div.field_item_sidebar input:not(.change_number) {
+  height: 29px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none;
+  position: relative;
+}
+div.field_item_sidebar .item:not(p), div.field_item_sidebar select:not(p), div.field_item_sidebar input:not(.change_number):not(p) {
+  width: 100%;
+}
+div.field_item_sidebar .item::-webkit-input-placeholder, div.field_item_sidebar select::-webkit-input-placeholder, div.field_item_sidebar input:not(.change_number)::-webkit-input-placeholder {
+  color: #444;
+  font-size: 14px !important;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+div.field_item_sidebar .item:-moz-placeholder, div.field_item_sidebar select:-moz-placeholder, div.field_item_sidebar input:not(.change_number):-moz-placeholder {
+  color: #444;
+  font-size: 14px !important;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+div.field_item_sidebar .item::-moz-placeholder, div.field_item_sidebar select::-moz-placeholder, div.field_item_sidebar input:not(.change_number)::-moz-placeholder {
+  color: #444;
+  font-size: 14px !important;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+div.field_item_sidebar .item:-ms-input-placeholder, div.field_item_sidebar select:-ms-input-placeholder, div.field_item_sidebar input:not(.change_number):-ms-input-placeholder {
+  color: #444;
+  font-size: 14px !important;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+div.field_item_sidebar .item::-ms-input-placeholder, div.field_item_sidebar select::-ms-input-placeholder, div.field_item_sidebar input:not(.change_number)::-ms-input-placeholder {
+  color: #444;
+  font-size: 14px !important;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+div.field_item_sidebar#background-color div.minicolors, div.field_item_sidebar#color div.minicolors {
+  padding: 5px;
+  height: 100%;
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+div.field_item_sidebar#background-color div.minicolors::after, div.field_item_sidebar#color div.minicolors::after {
+  content: 'Selectionner une couleur';
+  position: absolute;
+  padding: 0 !important;
+  top: 0;
+  bottom: 0;
+  line-height: 29px;
+  width: calc(100% - 33px);
+  background-color: #fff;
+  right: 0;
+  height: 100%;
+}
+div.field_item_sidebar#background-color input.minicolors-input, div.field_item_sidebar#color input.minicolors-input {
+  width: calc(100% - 33px);
+  text-transform: uppercase;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  height: 100%;
+  top: 0;
+  z-index: 0;
+  background-color: transparent;
+  position: absolute;
+  right: 0;
+}
+div.field_item_sidebar#background-color span.minicolors-swatch, div.field_item_sidebar#color span.minicolors-swatch {
+  top: 50%;
+  left: 5px;
+  width: 18px;
+  z-index: 999;
+  height: 18px;
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+div.field_item_sidebar#background-color div.minicolors-panel, div.field_item_sidebar#color div.minicolors-panel {
+  top: 23px;
+  left: 5px;
+}
+div.field_item_sidebar#height span.ui-spinner, div.field_item_sidebar#font-size span.ui-spinner, div.field_item_sidebar#line-height span.ui-spinner {
+  width: 100%;
+  height: 100% !important;
+  display: block;
+}
+div.field_item_sidebar#height input.ui-spinner-input, div.field_item_sidebar#font-size input.ui-spinner-input, div.field_item_sidebar#line-height input.ui-spinner-input {
+  margin: 0;
+  padding: 5px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
+  vertical-align: baseline;
+}
+div.field_item_sidebar#height a.ui-button, div.field_item_sidebar#font-size a.ui-button, div.field_item_sidebar#line-height a.ui-button {
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+div.field_item_sidebar#height a.ui-button:last-child, div.field_item_sidebar#font-size a.ui-button:last-child, div.field_item_sidebar#line-height a.ui-button:last-child {
+  right: 30px;
+}
+div.field_item_sidebar#height a.ui-button > span.ui-button-icon, div.field_item_sidebar#font-size a.ui-button > span.ui-button-icon, div.field_item_sidebar#line-height a.ui-button > span.ui-button-icon {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  margin: 0;
+  text-indent: 0;
+}
+div.field_item_sidebar#height a.ui-button > span.ui-button-icon i, div.field_item_sidebar#font-size a.ui-button > span.ui-button-icon i, div.field_item_sidebar#line-height a.ui-button > span.ui-button-icon i {
+  position: absolute;
+  color: #444;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+}
+div.field_item_sidebar#text-align span.format_align {
+  height: 100%;
+  width: 30px;
+  position: relative;
+  cursor: pointer;
+  display: block;
+}
+div.field_item_sidebar#text-align span.format_align:not(:first-child) {
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+div.field_item_sidebar#text-align span.format_align i {
+  position: absolute;
+  color: #444;
+  font-size: 16px;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 div.edit_img#imgToCroppie {
@@ -628,44 +855,6 @@ div.sidebar_tools > div.menu {
   background-color: #fff;
   min-height: 100%;
 }
-div.sidebar_tools > div.menu > header.tools_menu_email_block {
-  width: 100%;
-  background-color: #fff;
-}
-div.sidebar_tools > div.menu > header.tools_menu_email_block span {
-  width: calc(100% / 2);
-  background-color: #0786cb;
-  color: #fff;
-  text-align: center;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 13px 0;
-  border: 2px solid transparent;
-  border-top-color: #0676B2;
-  border-bottom-color: #0676B2;
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  text-transform: uppercase;
-  font-family: roboto;
-  font-size: 15px;
-  cursor: pointer;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  -webkit-transition: all 0.3s ease;
-  -webkit-transition-delay: 0s;
-  transition: all 0.3s ease 0s;
-}
-div.sidebar_tools > div.menu > header.tools_menu_email_block span.active {
-  background-color: #fff;
-  color: #444;
-  border-bottom-color: transparent;
-  border-top-color: #f0f0f0;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
 div.sidebar_tools > div.menu > div.task {
   width: 100%;
   display: none;
@@ -745,32 +934,6 @@ div.sidebar_tools > div.menu > div.task.todo p {
 }
 .menu .items_builder_block > div.field_tools_item_block > div.item > span.ui-spinner > a.ui-spinner-button.ui-spinner-down {
   right: 28px;
-}
-
-.ui-button-icon.ui-icon {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  text-indent: 0;
-}
-.ui-button-icon.ui-icon i {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 14px;
-  color: #444;
-}
-.ui-button-icon.ui-icon:active i {
-  margin-top: 3px;
 }
 
 div.field_tools_item_block .btn_tools,
